# remgpt

./: LICENSE  README.md  REFACTORING_SUMMARY.md  build_and_upload.py  debug_drift_detection.py  debug_openai_direct.py  debug_orchestrator_fix.py  debug_proper_tool_setup.py  debug_tool_schema.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_drift_sensitivity.py
examples/: comprehensive_memory_demo.py  enhanced_topic_demo.py  key_facts_demo.py  llm_client_usage.py  mock_llm_client_example.py  openai_demo.py  remote_tools_example.py
experimental/inspiration/: a2a_client.py  main.py  openai_provider.py  types.py
remgpt/: __init__.py  api.py  config.py  core.py  types.py  utils.py
remgpt/context/: __init__.py  base_block.py  context_tools.py  factory.py  llm_context.py  llm_context_manager.py  token_counter.py  topic_similarity_service.py
remgpt/context/blocks/: __init__.py  fifo_queue_block.py  memory_instructions_block.py  system_instructions_block.py  tools_definitions_block.py  working_context_block.py
remgpt/core/: __init__.py  core.py  utils.py
remgpt/detection/: __init__.py  embedding_result.py  page_hinkley_test.py  topic_drift_detector.py
remgpt/inspiration/: mcp_client.py  task_request_builder.py  tools_manager.py
remgpt/llm/: __init__.py  base.py  events.py  factory.py
remgpt/llm/providers/: __init__.py  claude_client.py  gemini_client.py  mock_client.py  openai_client.py
remgpt/orchestration/: __init__.py  events.py  factory.py  orchestrator.py  status.py
remgpt/storage/: __init__.py  memory_database.py  qdrant_database.py  vector_database.py
remgpt/summarization/: __init__.py  topic.py  topic_summarizer.py
remgpt/tools/: __init__.py  base.py  executor.py
remgpt/tools/remote/: __init__.py  a2a.py  base.py  manager.py  mcp.py  tool.py
scripts/: README.md  run_real_tests.py  topic_drift_demo.py  unified_event_demo.py
tests/: CLEANUP_SUMMARY.md  README.md  __init__.py  conftest.py  test_api.py  test_enhanced_topic_management.py  test_llm_client.py  test_llm_client_simple.py  test_topic_detection.py
tests/integration/: .gitignore  README.md  conftest.py  run_tests.py  test_always_available_tools.py  test_comprehensive_system_integration.py  test_end_to_end_system.py  test_explicit_tool_calling_final.py  test_integration.py
tests/test_tools/test_remote/: test_init.py  test_mcp.py  test_tool.py
tests/unit/api/: test_api.py  test_authentication.py
tests/unit/context/: test_summarization.py  test_topic_detection.py
tests/unit/llm/: test_llm_client.py
tests/unit/tools/: test_base.py  test_executor.py  test_integration.py
tests/unit/tools/test_remote/: test_a2a.py  test_manager.py  test_remote_base.py
