[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remgpt"
version = "0.2.0"
description = "Advanced Multi-Provider LLM Framework with Breakthrough Memory Management"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Siddharth Ambegaonkar", email = "sid.ambegaonkar@gmail.com"}
]
keywords = ["llm", "ai", "gpt", "claude", "gemini", "openai", "anthropic", "google", "memory", "topic-drift", "conversation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "tiktoken>=0.4.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0,<2.0",
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
claude = ["anthropic>=0.21.0"]
gemini = ["google-generativeai>=0.8.0"]
all-providers = ["openai>=1.0.0", "anthropic>=0.21.0", "google-generativeai>=0.8.0"]
qdrant = ["qdrant-client>=1.7.0"]
mcp = ["mcp>=1.0.0"]
dev = ["python-dotenv>=0.19.0", "pytest>=7.0.0", "pytest-asyncio>=0.21.0"]
all = ["openai>=1.0.0", "anthropic>=0.21.0", "google-generativeai>=0.8.0", "qdrant-client>=1.7.0", "mcp>=1.0.0", "python-dotenv>=0.19.0"]

[project.urls]
Homepage = "https://github.com/siddharthsma/remgpt"
Repository = "https://github.com/siddharthsma/remgpt"
Documentation = "https://github.com/siddharthsma/remgpt#readme"
Issues = "https://github.com/siddharthsma/remgpt/issues" 